--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">LegoWords</string>
     <string name="action_settings">Settings</string>
+    <string name="fox">Fox</string>
+
+    <string-array name="words">
+        <item>Fox</item>
+        <item>Fox1</item>
+        <item>Fox2</item>
+        <item>Fox3</item>
+        <item>Fox4</item>
+    </string-array>
 </resources>
